Add project/all and project/details/{id}
