# swagger.yaml
@@ -40,14 +40,12 @@ paths:
     get:
       tags:
         - "part"
-      summary: Finds All Parts
+      summary: Find All Parts
       responses:
         '200':
           description: successful operation
           schema:
-            type: array
-            items:
-              type: string
+            $ref: "#/definitions/Part"
         '400':
           description: Invalid value
   /part/details/{id}:
@@ -64,6 +62,8 @@ paths:
       responses:
         200:
           description: "successful operation"
+          schema:
+            $ref: "#/definitions/Part"
         400:
           description: "Invalid ID supplied"
         404:
@@ -84,6 +84,38 @@ paths:
           description: "Part deleted successfully!"
         404:
           description: "Part does not exists!" 
+  /project/all:
+    get:
+      tags:
+        - "project"
+      summary: Find All Projects
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Project"
+        '400':
+          description: Invalid value
+  /project/details/{id}:
+    get:
+      tags:
+        - "project"
+      description: "Returns a single project"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of project to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Project"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Project not found"
     
 definitions:
   Part:
